# src/docs/openapi.yaml
@@ -190,10 +190,10 @@ paths:
                 socialName:
                   type: string
                   description: 소셜 로그인 종류
-                  example: kakao || google
+                  example: kakao || google || apple
                 accessToken:
                   type: string
-                  description: accessToken 값
+                  description: kakao: accessToken 값, google: IDToken 값, apple: identityToken 값
                   
       responses:
         '200':
@@ -1236,9 +1236,115 @@ paths:
                 message: '문장 생성 실패'
                 error: 'error && error.message'
     get:
+      summary: '문장 조회(영현)'
+      tags:
+        - Sentences
+      parameters:
+        - in: query
+          name: sentenceId
+          schema:
+            type: number
+          required: false
+          example: 1
+          description: sentence 고유 id
+        - in: query
+          name: publisher
+          schema:
+            type: string
+          required: false
+          example: 'publisher'
+          description: '출판사명'
+        - in: query
+          name: bookName
+          schema:
+            type: string
+          required: false
+          example: bookName
+          description: '도서명'
+        - in: query
+          name: writer
+          schema:
+            type: string
+          required: false
+          example: writer
+          description: '저자명'
+      responses:
+        '200':
+          description: 'SUCCESS: 문장 조회 성공'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: '문장 조회 성공'
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Sentences'
+        '500' :
+          description: '서버 내부 에러'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                message: '문장 조회 실패'
+                error: 'error && error.message'
+    delete:
+      summary: 문장 삭제(영현)
+      tags:
+        - Sentences
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+                type: object
+                properties:
+                  sentenceId:
+                    type: number
+                  bookName:
+                    type: string
+                  writer:
+                    type: string
+                  publisher:
+                    type: string
+            example:
+              sentenceId: 1
+              bookName: '책 이름'
+              writer: '저자명'
+              publisher: "출판사명"
+      responses:
+        '200':
+          description: 'SUCCESS: 문장 삭제 성공'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: '문장 삭제 성공'
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Sentences'
+        '500' :
+          description: '서버 내부 에러'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                message: '문장 삭제 실패'
+                error: 'error && error.message'
+  /sentences/recommend:
+    get:
       security:
         - api_key: []
-      summary: '문장 조회(영현)'
+      summary: '추천문장 조회(영현)'
       tags:
         - Sentences
       parameters:
@@ -1258,7 +1364,7 @@ paths:
           description: user 고유 id
       responses:
         '200':
-          description: 'SUCCESS: 문장 조회 성공(문장 3개)'
+          description: 'SUCCESS: 추천문장 조회 성공(문장 3개)'
           content:
             application/json:
               schema:
@@ -1266,7 +1372,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: '문장 조회 성공'
+                    example: '추천문장 조회 성공'
                   data:
                     type: array
                     items:
@@ -1298,7 +1404,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                message: '문장 조회 실패'
+                message: '추천문장 조회 실패'
                 error: 'error && error.message'
   /sentences/onboarding:
     get:
@@ -1383,6 +1489,58 @@ paths:
                 $ref: '#/components/schemas/Error'
               example:
                 message: 'emotionId must be a `number` type, but the final value was: `NaN` (cast from the value `\"\"`).'
+  /sentences/blind:
+    put:    
+      summary: '문장블라인드 수정(영현)'
+      tags:
+        - Sentences
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+                type: object
+                properties:
+                  sentenceId:
+                    type: number
+                  bookName:
+                    type: string
+                  writer:
+                    type: string
+                  publisher:
+                    type: string
+                  blindedAt:
+                    type: string
+                example:
+                  sentenceId: 1
+                  bookName: '책 이름'
+                  writer: '저자명'
+                  publisher: "출판사명"
+                  blindedAt: "2021-02-02 06:00"
+      responses:
+        '200':
+          description: 'SUCCESS: 문장블라인드 수정 성공'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: '문장블라인드 수정 성공'
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Sentences'
+        '500' :
+          description: '서버 내부 에러'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                message: '문장블라인드 수정 실패'
+                error: 'error && error.message'
   /emotions:
     get:
       security:
@@ -1462,6 +1620,9 @@ components:
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     Emotions:
       type: object
       required:
@@ -1480,6 +1641,9 @@ components:
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     Sentences:
       type: object
       required: ['id', 'contents', 'bookName', 'writer', 'publisher']
@@ -1499,12 +1663,18 @@ components:
         publisher:
           type: string
           description: 출판사
+        blindedAt:
+          type: date-time
+          description: 해당 문장이 블라인드 처리된 시점
         createdAt:
           type: date-time
           description: 해당 데이터가 생성된 시점
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     Diaries:
       type: object
       required: ['id', 'contents', 'position', 'depth', 'userId', 'sentenceId', 'emotionId', 'wroteAt']
@@ -1524,6 +1694,9 @@ components:
         sentenceId:
           type: number
           description: 일기에 사용된 sentence 고유 id
+        tempSentenceId:
+          type: number
+          description: 일기에 사용된 sentece 고유 id(백업용)
         emotionId:
           type: number
           description: 일기의 감정에 해당하는 emotion 고유 id
@@ -1539,6 +1712,9 @@ components:
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     Notifications:
       type: object
       required: ['id', 'deviceToken', 'userId']
@@ -1558,6 +1734,9 @@ components:
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     UsersRecommendedSentences:
       type: object
       required: ['id', 'userId', 'sentenceId', 'emotionId']
@@ -1580,6 +1759,9 @@ components:
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     EmotionsHaveSentences:
       type: object
       required: ['id', 'userId', 'sentenceId', 'emotionId']
@@ -1599,6 +1781,9 @@ components:
         updatedAt:
           type: date-time
           description: 해당 데이터가 변경된 시점
+        deletedAt:
+          type: date-time
+          description: 해당 데이터가 삭제된 시점
     DiariesWithSentencesAndEmotions:
       allOf:
         - $ref: '#/components/schemas/Diaries'
